[project]
name = "chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ 'textual' ]

[tool.pyright]
reportOptionalMemberAccess = false

[tool.pylint.'MESSAGES CONTROL']
disable = "E1101"  # Disables optional member access errors
